# NanobotSkills

./: CLAUDE.md  README.md
miniflux-http/: .gitignore  SKILL.md  pyproject.toml
miniflux-http/agents/: openai.yaml
miniflux-http/references/: command-surface.md  repo-alignment.md
miniflux-http/scripts/: clean-test-artifacts.py  miniflux_http.py  run-tests.py  test_runtime.py
miniflux-http/tests/: conftest.py  test_miniflux_http.py
miniflux-http/tests/e2e/: conftest.py  test_e2e_lifecycle.py
nanobot-http-chat/: SKILL.md
nanobot-http-chat/agents/: openai.yaml
nanobot-http-chat/scripts/: nanobot_http_chat.py
ssh-remote-docker-ops/: SKILL.md
ssh-remote-docker-ops/assets/: docker-ssh.cmd
ssh-remote-docker-ops/scripts/: install-remote-wrapper.ps1  verify-remote-wrapper.ps1
timeline-memory/: .gitignore  README.md  SKILL.md  pyproject.toml
timeline-memory/references/: README.md  design-milestones-status-and-acceptance.md  pending-design-milestones-and-acceptance.md  project-turn-proxy-design.md  schema.md
timeline-memory/references/risks/: README.md  risk-01-input-type-coercion.md  risk-02-error-classification-by-message.md  risk-03-legacy-write-order-mismatch.md  risk-04-input-contract-test-gaps.md  risk-05-import-path-fragility.md  risk-06-documentation-fragmentation.md
timeline-memory/scripts/: __init__.py  clean-test-artifacts.py  errors.py  models.py  run-host-tests.py  selftest.py  store.py  test_runtime.py  time_utils.py  timeline_cli.py
timeline-memory/tests/: conftest.py
todo-txt/: SKILL.md
(+5 files in other folders)
