[project]
name = "miniflux-http-skill"
version = "0.1.0"
description = "Standalone miniflux-http skill bundle"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
